# Opengl-engine

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEFERRED_FEATURES.md  README.md  todo.md
dependencies/includes/assimp/: revision.h
dependencies/lib/: StbImage.c
includes/: Camera.h  Entity.h
includes/core/: Application.h  Scene.h
includes/ecs/: CameraManager.h  EntityManager.h  Id.h  NameManager.h  TransformManager.h
includes/renderer/: Texture.h
res/shaders/: basic.frag  basic.vert  default.frag  default.vert  error.frag  error.vert  lit.frag  lit.vert  texture_test.frag  texture_test.vert
src/: Application.cpp  Camera.cpp  CameraManager.cpp  Entity.cpp  EntityManager.cpp  Material.cpp  Mesh.cpp  Model.cpp  NameManager.cpp  Primitive.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  ShaderProgram.cpp  Texture.cpp  TransformManager.cpp  main.cpp
src/core/: Application.cpp  ResourceManager.cpp  Scene.cpp
src/ecs/: CameraManager.cpp  EntityManager.cpp  NameManager.cpp  TransformManager.cpp
src/includes/: Application.h  CameraManager.hpp  Entity.h  EntityManager.hpp  Id.hpp  Material.h  Mesh.h  Model.h  NameManager.hpp  Primitive.h  Renderer.h  ResourceManager.h  Scene.h  ShaderProgram.h  Texture.h  TransformManager.hpp
src/renderer/: Material.cpp  Mesh.cpp  Model.cpp  Primitive.cpp  Renderer.cpp  ShaderProgram.cpp  Texture.cpp
